--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "babel-plugin-import": "^1.13.5",
+    "prerender-spa-plugin": "^3.4.0"
   },
   "scripts": {
     "start": "craco start",
@@ -41,6 +43,6 @@
     ]
   },
   "devDependencies": {
-    "prerender-spa-plugin": "^3.4.0"
+    
   }
 }
