--- a/package.json
+++ b/package.json
@@ -9,20 +9,26 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "antd": "^4.23.6",
+    "autoprefixer": "^9",
+    "axios": "^1.1.3",
+    "babel-plugin-import": "^1.13.5",
     "craco-less": "^2.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "postcss": "^7",
+    "postcss-px-to-viewport": "^1.1.1",
+    "prerender-spa-plugin": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0",
-    "babel-plugin-import": "^1.13.5",
-    "prerender-spa-plugin": "^3.4.0"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "craco start",
     "build": "craco build",
-    "test": "craco test"
+    "test": "craco test",
+    "dev": "craco start"
   },
   "eslintConfig": {
     "extends": [
@@ -41,8 +47,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    
   }
 }
