--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@craco/craco": "^6.4.5",
     "@dreysolano/prerender-spa-plugin": "^1.0.3",
+    "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -13,14 +14,17 @@
     "axios": "^1.1.3",
     "babel-plugin-import": "^1.13.5",
     "craco-less": "^2.0.0",
+    "craco-resolve-url-loader": "^1.0.0",
     "html-webpack-plugin": "^5.5.0",
     "postcss": "^7",
     "postcss-px-to-viewport": "^1.1.1",
     "prerender-spa-plugin": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "web-vitals": "^2.1.0"
   },
